--- a/web-editor/frontend/package.json
+++ b/web-editor/frontend/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@monaco-editor/react": "^4.4.5",
+    "@svgdotjs/svg.js": "^3.1.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-resize-detector": "^7.0.0",
