--- a/app/package.json
+++ b/app/package.json
@@ -12,16 +12,22 @@
     "dev:tailwind": "concurrently \"tailwindcss --input input.css --output tailwind.css --no-autoprefixer --watch\" \"tailwind-rn --watch\""
   },
   "dependencies": {
+    "@rivascva/react-native-code-editor": "^1.2.2",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
+    "lodash": "^4.17.21",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-gesture-handler": "^2.4.2",
+    "react-native-reanimated": "^2.8.0",
+    "react-native-ui-lib": "^6.17.1",
     "react-native-web": "0.17.7",
     "tailwind-rn": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@types/lodash": "^4.14.182",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.66.13",
     "@typescript-eslint/eslint-plugin": "^5.27.1",
