--- a/web-editor/frontend/package.json
+++ b/web-editor/frontend/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.0.0",
     "react-resize-detector": "^7.0.0",
     "react-split": "^2.0.14",
+    "turtle-graphics": "^1.6.0",
     "xterm": "^4.18.0",
     "xterm-addon-fit": "^0.5.0"
   },
