--- a/web-editor/backend/package.json
+++ b/web-editor/backend/package.json
@@ -2,29 +2,27 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "type": "module",
   "scripts": {
-    "start:dev": "nodemon src/index.ts"
+    "dev": "nodemon src/index.ts"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
-    "cors": "^2.8.5",
+    "@fastify/cors": "^8.0.0",
+    "@fastify/helmet": "^9.1.0",
     "eiows": "^4.1.2",
-    "express": "^4.18.1",
-    "helmet": "^5.1.0",
-    "morgan": "^1.10.0",
+    "fastify": "^4.0.3",
+    "nanoid": "^4.0.0",
     "socket.io": "^4.5.1",
     "socket.io-msgpack-parser": "^3.0.1"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.12",
-    "@types/express": "^4.17.13",
-    "@types/morgan": "^1.9.3",
     "@types/node": "^17.0.42",
     "nodemon": "^2.0.16",
-    "sucrase": "^3.21.0",
+    "ts-node": "^10.8.1",
     "typescript": "^4.7.3"
   }
 }
