--- a/web-editor/frontend/.eslintrc.json
+++ b/web-editor/frontend/.eslintrc.json
@@ -23,6 +23,7 @@
   ],
   "rules": {
     "prettier/prettier": ["error", {}, { "usePrettierrc": true }],
-    "react/react-in-jsx-scope": "off"
+    "react/react-in-jsx-scope": "off",
+    "react/no-unknown-property": "off"
   }
 }
