--- a/web-editor/frontend/package.json
+++ b/web-editor/frontend/package.json
@@ -8,19 +8,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@monaco-editor/react": "^4.4.5",
-    "@svgdotjs/svg.js": "^3.1.2",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "@codemirror/lang-python": "^6.0.0",
+    "@codemirror/language": "^6.2.0",
+    "@hookform/resolvers": "^2.9.1",
+    "@uiw/codemirror-theme-dracula": "^4.9.5",
+    "@uiw/react-codemirror": "^4.9.5",
+    "axios": "^0.27.2",
+    "preact": "^10.8.2",
+    "react-hook-form": "^7.32.2",
     "react-resize-detector": "^7.0.0",
     "react-split": "^2.0.14",
     "turtle-graphics": "^1.6.0",
+    "wouter-preact": "2.8.0-alpha.2",
     "xterm": "^4.18.0",
-    "xterm-addon-fit": "^0.5.0"
+    "xterm-addon-fit": "^0.5.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
+    "@preact/preset-vite": "^2.3.0",
     "@typescript-eslint/eslint-plugin": "^5.25.0",
     "@typescript-eslint/parser": "^5.25.0",
     "@vitejs/plugin-react": "^1.3.0",
@@ -32,7 +37,6 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.30.0",
-    "monaco-editor": "^0.33.0",
     "prettier": "^2.6.2",
     "typescript": "^4.6.3",
     "unocss": "^0.33.5",
