--- a/web-editor/frontend/tsconfig.json
+++ b/web-editor/frontend/tsconfig.json
@@ -14,7 +14,9 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "preserve",
+    "jsxFactory": "h",
+    "jsxFragmentFactory": "Fragment"
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
