--- a/web-editor/frontend/package.json
+++ b/web-editor/frontend/package.json
@@ -11,10 +11,13 @@
     "@codemirror/lang-python": "^6.0.0",
     "@codemirror/language": "^6.2.0",
     "@hookform/resolvers": "^2.9.1",
+    "@stackblitz/sdk": "^1.8.0",
     "@uiw/codemirror-theme-dracula": "^4.9.5",
     "@uiw/react-codemirror": "^4.9.5",
+    "avr8js": "^0.19.0",
     "axios": "^0.27.2",
     "blockly": "^8.0.4",
+    "intel-hex": "^0.1.2",
     "preact": "^10.8.2",
     "react-blockly": "^7.0.1",
     "react-hook-form": "^7.32.2",
@@ -44,7 +47,7 @@
     "pyodide": "^0.20.0",
     "typescript": "^4.6.3",
     "unocss": "^0.33.5",
-    "vite": "^2.9.9",
+    "vite": "^3.0.0",
     "vite-plugin-pwa": "^0.12.0"
   }
 }
