--- a/web-editor/backend/package.json
+++ b/web-editor/backend/package.json
@@ -2,34 +2,20 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/index.js",
-  "type": "module",
   "scripts": {
-    "dev": "nodemon src/index.ts"
+    "dev": "sls offline"
   },
-  "keywords": [],
-  "author": "",
-  "license": "MIT",
   "dependencies": {
-    "@fastify/cors": "^8.0.0",
-    "@fastify/helmet": "^9.1.0",
-    "@fastify/type-provider-typebox": "^1.0.0",
-    "@prisma/client": "^3.15.2",
-    "@sinclair/typebox": "^0.23.5",
-    "argon2": "^0.28.5",
-    "eiows": "^4.1.2",
-    "fastify": "^4.0.3",
-    "google-auth-library": "^8.0.2",
-    "jsonwebtoken": "^8.5.1",
-    "nanoid": "^4.0.0",
-    "socket.io": "^4.5.1",
-    "socket.io-msgpack-parser": "^3.0.1"
+    "@fastify/aws-lambda": "^3.1.1",
+    "dynamoose": "^3.0.2",
+    "express": "^4.17.1",
+    "fastify": "^4.5.3"
   },
   "devDependencies": {
-    "@types/jsonwebtoken": "^8.5.8",
-    "@types/node": "^17.0.42",
-    "nodemon": "^2.0.16",
-    "ts-node": "^10.8.1",
-    "typescript": "^4.7.3"
+    "@types/aws-lambda": "^8.10.102",
+    "nodemon": "^2.0.19",
+    "serverless-esbuild": "^1.32.8",
+    "serverless-localstack": "^1.0.0",
+    "serverless-offline": "^9.3.0"
   }
 }
