--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-	"dependencies": {
-		"ataraxia": "^0.12.2",
-		"ataraxia-tcp": "^0.12.0"
-	}
+  "name": "felipy",
+	"workspaces": [
+    "web-editor/frontend",
+    "web-editor/backend"
+  ]
 }
